# Serenya-Bot

./: .gitignore  Cargo.toml  README.md  audit.toml  build-pgo.ps1  build-pgo.sh  config.example.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/rusty-ytdl/: Cargo.toml
crates/rusty-ytdl/src/: info.rs  lib.rs  utils.rs
crates/rusty-ytdl/src/search/: youtube.rs
crates/rusty-ytdl/src/stream/: remote_data.rs
crates/rusty-ytdl/src/stream/streams/: live.rs  mod.rs  non_live.rs
crates/rusty-ytdl/tests/: download_with_chunks.rs
crates/youtube_resolver/: Cargo.toml
crates/youtube_resolver/src/: format_selector.rs  innertube.rs  js_solver.rs  lib.rs  rusty_resolver.rs  session.rs  types.rs
crates/youtube_resolver/src/js_solver/: runtime.rs
src/: main.rs
src/audio/: events.rs  mod.rs  providers.rs  quality.rs  ranking.rs  resolver.rs  runtime.rs  source.rs
src/commands/: audio.rs  control.rs  info.rs  media.rs  meta.rs  mod.rs  playback.rs  queue.rs  settings.rs  stats.rs  voice.rs
src/commands/playlist/: add.rs  manage.rs
src/config/: mod.rs
src/database/: mod.rs
src/discord/: embeds.rs
src/logging/: redact.rs  webhook.rs
