[package]
name = "youtube_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty_ytdl = { path = "../rusty-ytdl", default-features = false, features = ["rustls"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli"] }

async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mime = "0.3"
moka = { version = "0.12", features = ["future"] }
sha1 = "0.10"
boa_engine = "0.21.0"
url = "2"
regex = "1"
tracing = "0.1"


